--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,11 @@
-<section class="hero">
-  <div class="container hero-container">
-    <h1 class="hero-header">
-      Discover the joy of learning
-      <span class="hero-header-english">English</span> with us!
-    </h1>
-    <div class="hero-buttons-wrapper">
+<section class="hero section">
+  <div class="container">
+    <div class="hero-container">
+      <h1 class="hero-header">
+        Discover the joy of learning
+        <span class="hero-header-english">English</span> with us!
+      </h1>
+
       <a href="#leave-application" class="button hero-button"
         >Leave an application</a
       >
