--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,10 +1,10 @@
 <!-- REVIEWS -->
-<section class="reviews">
+<section class="reviews section">
   <div class="container">
-    <h2 class="reviews-title">
-      What our <span class="reviews-title-accent">students</span> say
+    <h2 class="section-title">
+      What our <span class="section-title-accent">students</span> say
     </h2>
-    <p class="reviews-description">
+    <p class="section-description reviews-description">
       Hear from our students about their learning journey with us, as they share
       their experiences, progress, and the transformative impact
     </p>
