added privacy policy page

--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -193,7 +193,8 @@
 
         <p class="leave-application-form-agreement-text">
           By clicking on “Send” button, you agree to our
-          <a class="leave-application-form-link" href="">Privacy Policy</a
+          <a class="leave-application-form-link" href="./privacy-policy.html"
+            >Privacy Policy</a
           >,<br />
           and allow Promodo to use this information for marketing purposes.
         </p>
