--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,6 +5,7 @@
   |============================
 */
 @import url('./reset.css');
+@import url('./fonts.css');
 @import url('./variables.css');
 @import url('./header.css');
 @import url('./hero.css');
@@ -17,20 +18,8 @@
 @import url('./footer.css');
 
 :root {
-  font-family: 'Manrope', Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  line-height: 24px;
-  font-weight: 400;
-
   color: var(--black);
   background-color: var(--white);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 
   scroll-behavior: smooth;
 }
