--- a/src/partials/our-teachers.html
+++ b/src/partials/our-teachers.html
@@ -1,10 +1,10 @@
 <!-- OUR TEACHERS -->
-<section class="our-teachers">
+<section class="section">
   <div class="container">
-    <h2 class="our-teachers-title">
-      Meet our <span class="our-teachers-title-accent">teachers</span>
+    <h2 class="section-title">
+      Meet our <span class="section-title-accent">teachers</span>
     </h2>
-    <p class="our-teachers-description">
+    <p class="our-teachers-description section-description">
       Discover our team of dedicated educators, committed to guiding you on your
       journey to English proficiency with personalized and engaging instruction
     </p>
