--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <div class="proposal-section">
+  <div class="section proposal-section">
     <h2 class="visually-hidden">Proposal to leave an application</h2>
     <strong class="proposal-appeal"
       >Master the <span class="proposal-accent">Language</span> with Our English
