EDIT proposal section styles

--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -1,12 +1,15 @@
-<section class="container">
-  <div class="section proposal-section">
+<div class="container">
+  <section class="proposal-section">
     <h2 class="visually-hidden">Proposal to leave an application</h2>
+
     <strong class="proposal-appeal"
       >Master the <span class="proposal-accent">Language</span> with Our English
       Package!</strong
     >
+
     <div class="proposal-content-wrap">
       <h3 class="proposal-aux-title">Power of English</h3>
+
       <ul class="proposal-list">
         <li class="proposal-list-item">
           <div class="proposal-list-item-icon"></div>
@@ -14,12 +17,14 @@
             Dive into captivating lessons designed to stimulate your curiosity.
           </p>
         </li>
+
         <li class="proposal-list-item">
           <div class="proposal-list-item-icon"></div>
           <p class="proposal-list-item-text">
             Learn in a nurturing setting where every student's progress matters.
           </p>
         </li>
+
         <li class="proposal-list-item">
           <div class="proposal-list-item-icon"></div>
           <p class="proposal-list-item-text">
@@ -28,9 +33,10 @@
           </p>
         </li>
       </ul>
+
       <a class="button proposal-button" href="#leave-application"
         >Leave an application</a
       >
     </div>
-  </div>
-</section>
+  </section>
+</div>
