--- a/src/css/proposal-to-leave-application.css
+++ b/src/css/proposal-to-leave-application.css
@@ -1,12 +1,17 @@
-/* PROPOSAL TO LEAVE AND APPLICATION */
-.section.proposal-section {
+/* PROPOSAL TO LEAVE AN APPLICATION */
+.proposal-section {
   padding: 40px 20px 64px;
 
-  text-align: start;
   border-radius: 30px;
   background: var(--gree-linear);
 
   overflow: hidden;
+}
+
+@media only screen and (min-width: 768px) {
+  .proposal-section {
+    padding: 64px 18px 92px;
+  }
 }
 
 .proposal-appeal {
@@ -17,6 +22,16 @@
   line-height: 1.05;
 
   color: var(--white);
+}
+
+@media only screen and (min-width: 768px) {
+  .proposal-appeal {
+    padding: 0 14px;
+    margin-bottom: 83px;
+
+    font-size: 60px;
+    line-height: 1.16;
+  }
 }
 
 .proposal-accent {
@@ -30,6 +45,12 @@
 
   border-radius: 16px;
   background-color: var(--white);
+}
+
+@media only screen and (min-width: 768px) {
+  .proposal-content-wrap {
+    padding: 65px 32px 63px;
+  }
 }
 
 .proposal-content-wrap::after {
@@ -65,6 +86,14 @@
 
   font-size: 20px;
   letter-spacing: -0.02em;
+}
+@media only screen and (min-width: 768px) {
+  .proposal-aux-title {
+    margin-bottom: 32px;
+
+    font-size: 40px;
+    line-height: 1.2;
+  }
 }
 
 .proposal-list {
