--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,6 +4,41 @@
   color: var(--white);
 }
 
+@media only screen and (min-width: 768px) {
+  .footer {
+    padding: 32px 0 16px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .footer {
+    padding: 64px 0 23px;
+  }
+}
+
+.footer-top {
+  margin-bottom: 40px;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-top {
+    margin-bottom: 110px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .footer-top {
+    margin-bottom: 64px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-top {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .footer-bottom {
   color: rgba(255, 255, 255, 0.6);
   display: flex;
@@ -11,12 +46,16 @@
   flex-wrap: wrap;
   padding-top: 20px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
+  font-size: 14px;
+  line-height: 1.3;
+  letter-spacing: -0.02px;
 }
 
 @media only screen and (min-width: 768px) {
   .footer-bottom {
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
   }
 }
 
@@ -24,6 +63,16 @@
   display: flex;
   gap: 18px;
   margin-top: 14px;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-bottom-list {
+    margin-top: 0;
+  }
+}
+
+.footer-wrap {
+  margin-bottom: 40px;
 }
 
 .footer-logo {
@@ -36,7 +85,13 @@
 }
 
 .footer-address {
-  margin: 20px 0 40px;
+  margin-top: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-address {
+    margin-top: 32px;
+  }
 }
 
 .footer-list-item {
@@ -65,38 +120,56 @@
 
 .footer-list-menu .footer-item {
   position: relative;
-  transition: opacity 250ms ease;
 }
 
 .footer-list-menu .footer-item:after {
   position: absolute;
   content: '';
-  width: 37px;
+  width: 0px;
   height: 2px;
   left: 0;
   bottom: -5px;
   background-color: var(--green);
   opacity: 0;
+  transition:
+    opacity 250ms ease,
+    width 250ms ease;
 }
 
 .footer-list-menu .footer-item:hover:after {
   opacity: 1;
+  width: 37px;
 }
 
 .footer-social {
   display: flex;
   gap: 12px;
-  margin-bottom: 40px;
 }
 
 .footer-social-item {
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.1);
-  padding: 8px;
+  width: 42px;
+  height: 42px;
   display: flex;
   align-items: center;
+  justify-content: center;
   cursor: pointer;
-  transition: border-color 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: border-color var(--animation-fast);
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-social-item {
+    width: 44px;
+    height: 44px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-social-item svg {
+    width: 28px;
+    height: 28px;
+  }
 }
 
 .footer-social-item:hover,
@@ -107,7 +180,7 @@
 .footer-icon {
   fill: var(--white);
   opacity: 0.8;
-  transition: fill 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: fill var(--animation-fast);
 }
 
 .footer-social-item:hover .footer-icon,
