--- a/src/css/main.css
+++ b/src/css/main.css
@@ -146,7 +146,7 @@
 }
 
 .button:hover {
-  background-color: #38ae5f;
+  background-color: var(--gray);
 }
 
 @media only screen and (min-width: 768px) {
