--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,39 +1,46 @@
 <footer class="footer">
   <div class="container">
     <div class="footer-top">
-      <a href="index.html" class="footer-logo"
-        >english<span class="footer-item-accent">excellence</span>.</a
-      >
-      <address class="footer-address">
-        <ul class="footer-list">
-          <li class="footer-list-item">
-            <p class="item-title">Phone number:</p>
-            <a href="tel:+380684439426" class="footer-item"
-              >+380 (68) 443-94-26</a
-            >
-          </li>
-          <li class="footer-list-item">
-            <p class="item-title">Address:</p>
-            <a href="" class="footer-item">32a M. Bazhana ave</a>
-          </li>
-        </ul>
-      </address>
+      <div class="footer-wrap">
+        <a href="index.html" class="footer-logo"
+          >english<span class="footer-item-accent">excellence</span>.</a
+        >
+        <address class="footer-address">
+          <ul class="footer-list">
+            <li class="footer-list-item">
+              <p class="item-title">Phone number:</p>
+              <a href="tel:+380684439426" class="footer-item"
+                >+380 (68) 443-94-26</a
+              >
+            </li>
+            <li class="footer-list-item">
+              <p class="item-title">Address:</p>
+              <a
+                href="https://maps.app.goo.gl/bPwTf8E8XLwf26PZ7"
+                target="_blank"
+                class="footer-item"
+                >32a M. Bazhana ave</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
       <nav class="footer-nav">
         <ul class="footer-list footer-list-menu">
           <li class="footer-list-item">
-            <a href="" class="footer-item">About us</a>
+            <a href="#about-us" class="footer-item">About us</a>
           </li>
           <li class="footer-list-item">
-            <a href="" class="footer-item">Our lessons</a>
+            <a href="#lessons" class="footer-item">Our lessons</a>
           </li>
           <li class="footer-list-item">
-            <a href="" class="footer-item">Teachers</a>
+            <a href="#teachers" class="footer-item">Teachers</a>
           </li>
           <li class="footer-list-item">
-            <a href="" class="footer-item">Reviews</a>
+            <a href="#reviews" class="footer-item">Reviews</a>
           </li>
           <li class="footer-list-item">
-            <a href="" class="footer-item">Contact us</a>
+            <a href="#contact" class="footer-item">Contact us</a>
           </li>
         </ul>
       </nav>
@@ -42,6 +49,8 @@
           <a
             href="https://www.facebook.com/goITclub/"
             class="footer-social-item"
+            rel="noopener noreferrer"
+            target="_blank"
           >
             <svg class="footer-icon" width="26" height="26">
               <use href="./img/icons.svg#icon-facebook"></use>
@@ -52,6 +61,8 @@
           <a
             href="https://www.instagram.com/goitclub/"
             class="footer-social-item"
+            rel="noopener noreferrer"
+            target="_blank"
           >
             <svg class="footer-icon" width="26" height="26">
               <use href="./img/icons.svg#icon-instagram"></use>
@@ -59,7 +70,12 @@
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/c/GoIT" class="footer-social-item">
+          <a
+            href="https://www.youtube.com/c/GoIT"
+            class="footer-social-item"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
             <svg class="footer-icon" width="26" height="26">
               <use href="./img/icons.svg#icon-youtube"></use>
             </svg>
@@ -71,7 +87,9 @@
       <p class="text">&#169;2023 English Excellence. All rights reserved.</p>
       <ul class="footer-bottom-list">
         <li class="footer-bottom-item">
-          <a class="link" href="" target="blank">Privacy Policy</a>
+          <a class="link" href="./privacy-policy.html" target="_blank"
+            >Privacy Policy</a
+          >
         </li>
         <li class="footer-bottom-item">
           <a class="link" href="" target="blank">Terms of Service</a>
