--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,72 +1,174 @@
- <header class="header" id="home">
-      <div class="header-container container" id="header-top">
-        <!-- Navigation -->
-        <a href="" class="header-logo"
-          >english<span class="header-logo-span">excellence</span>.</a
-        >
-        <nav class="header-nav">
-          <!-- Logo -->
+<!--HEADER-->
+<header class="header" id="home">
+  <div class="header-container container" id="header-top">
+    <!-- Navigation -->
+    <a href="index.html" class="header-logo"
+      >english<span class="header-logo-span">excellence</span>.</a
+    >
+    <nav class="header-nav">
+      <!-- Logo -->
 
-          <ul class="header-nav-list">
-            <li class="header-nav-item">
-              <a class="header-nav-link-one" href="#about-us">About us</a>
-            </li>
-            <li class="header-nav-item">
-              <a class="header-nav-link-two" href="#our-lessons">Our lessons</a>
-            </li>
-            <li class="header-nav-item">
-              <a class="header-nav-link-three" href="#teachers">Teachers</a>
-            </li>
-            <li class="header-nav-item">
-              <a class="header-nav-link-four" href="#reviews">Reviews</a>
-            </li>
-            <li class="header-nav-item">
-              <a class="header-nav-link-five" href="#leave-section"
-                >Contact Us</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <ul class="header-socials list">
-          <li class="header-socials-item">
-            <a
-              class="header-socials-link link"
-              href="https://facebook.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="Facebook link"
-            >
-              <svg class="header-socials-icon" width="28" height="28">
-                <use href="./src/img/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
+      <ul class="header-nav-list">
+        <li class="header-nav-item">
+          <a class="header-nav-link-one" href="#about-us">About us</a>
+        </li>
+        <li class="header-nav-item">
+          <a class="header-nav-link-two" href="#our-lessons">Our lessons</a>
+        </li>
+        <li class="header-nav-item">
+          <a class="header-nav-link-three" href="#teachers">Teachers</a>
+        </li>
+        <li class="header-nav-item">
+          <a class="header-nav-link-four" href="#reviews">Reviews</a>
+        </li>
+        <li class="header-nav-item">
+          <a class="header-nav-link-five" href="#leave-section">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="header-socials list">
+      <li class="header-socials-item">
+        <a
+          class="header-socials-link link"
+          href="https://facebook.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Facebook link"
+        >
+          <svg class="header-socials-icon" width="28" height="28">
+            <use href="./img/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-socials-item">
+        <a
+          class="header-socials-link link"
+          href="https://instagram.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Instagram link"
+        >
+          <svg class="header-socials-icon" width="28" height="28">
+            <use href="./img/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-socials-item">
+        <a
+          class="header-socials-link link"
+          href="https://youtube.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="youtube link"
+        >
+          <svg class="header-socials-icon" width="24" height="24">
+            <use href="./img/icons.svg#icon-youtube"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <!-- Mobile Menu -->
+
+    <button
+      class="menu-open-button js-open-menu"
+      type="button"
+      aria-expanded="false"
+      aria-controls="mobile-menu"
+      data-menu-open-btn
+    >
+      <svg
+        class="menu-open-icon"
+        width="32"
+        height="23"
+        aria-controls="mobile-menu"
+        aria-expanded="false"
+        role="img"
+      >
+        <use
+          xlink:href="./images/icons.svg#icon-Nav"
+        ></use>
+      </svg>
+    </button>
+  </div>
+  <!-- Mobile Menu container -->
+  <div class="backdrop is-hidden" data-menu-backdrop>
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button
+        type="button"
+        class="menu-close-button js-close-menu"
+        data-menu-close-btn
+      >
+        <svg class="menu-close-icon" width="32" height="32">
+          <use href="./img/icons.svg#icon-Nav"></use>
+        </svg>
+      </button>
+
+      <!-- Mobile Menu Navigation  -->
+
+      <div class="menu-nav">
+        <ul class="menu-nav-list">
+          <li class="menu-nav-item">
+            <a class="menu-nav-link" href="#about-us">About us</a>
           </li>
-          <li class="header-socials-item">
-            <a
-              class="header-socials-link link"
-              href="https://instagram.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="Instagram link"
-            >
-              <svg class="header-socials-icon" width="28" height="28">
-                <use href="./img/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
+          <li class="menu-nav-item">
+            <a class="menu-nav-link" href="#our-lessons">Our lessons</a>
           </li>
-          <li class="header-socials-item">
-            <a
-              class="header-socials-link link"
-              href="https://youtube.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="youtube link"
-            >
-              <svg class="header-socials-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-youtube"></use>
-              </svg>
-            </a>
+          <li class="menu-nav-item">
+            <a class="menu-nav-link" href="#teachers">Teachers</a>
+          </li>
+          <li class="menu-nav-item">
+            <a class="menu-nav-link" href="#reviews">Reviews</a>
+          </li>
+          <li class="menu-nav-item">
+            <a class="menu-nav-link" href="#leave-section">Contact Us</a>
           </li>
         </ul>
-			</div>>
-	</header>
+      </div>
+
+      <!-- Mobile Menu Socials -->
+
+      <ul class="menu-socials-list">
+        <li class="menu-socials-item">
+          <a
+            class="menu-socials-link"
+            href="https://facebook.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="facebook icon"
+          >
+            <svg class="menu-socials-icon" width="28" height="28">
+              <use href="./img/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li class="menu-socials-item">
+          <a
+            class="menu-socials-link"
+            href="https://instagram.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="instagram icon"
+          >
+            <svg class="menu-socials-icon" width="28" height="28">
+              <use href="./img/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-socials-item">
+          <a
+            class="menu-socials-link"
+            href="https://youtube.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="youtube icon"
+          >
+            <svg class="menu-socials-icon" width="28" height="28">
+              <use href="./img/icons.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</header>
