--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -10,29 +10,36 @@
     <div class="proposal-content-wrap">
       <h3 class="proposal-aux-title">Power of English</h3>
 
-      <ul class="proposal-list">
-        <li class="proposal-list-item">
-          <div class="proposal-list-item-icon"></div>
-          <p class="proposal-list-item-text">
-            Dive into captivating lessons designed to stimulate your curiosity.
-          </p>
-        </li>
+      <div class="proposal-list-wrap">
+        <ul class="proposal-list">
+          <li class="proposal-list-item">
+            <div class="proposal-list-item-icon"></div>
+            <p class="proposal-list-item-text">
+              Dive into captivating lessons designed to stimulate your
+              curiosity.
+            </p>
+          </li>
 
-        <li class="proposal-list-item">
-          <div class="proposal-list-item-icon"></div>
-          <p class="proposal-list-item-text">
-            Learn in a nurturing setting where every student's progress matters.
-          </p>
-        </li>
+          <li class="proposal-list-item">
+            <div class="proposal-list-item-icon"></div>
+            <p class="proposal-list-item-text">
+              Learn in a nurturing setting where every student's progress
+              matters.
+            </p>
+          </li>
 
-        <li class="proposal-list-item">
-          <div class="proposal-list-item-icon"></div>
-          <p class="proposal-list-item-text">
-            Experience the satisfaction of real progress as your language skills
-            and confidence grow with every session.
-          </p>
-        </li>
-      </ul>
+          <li class="proposal-list-item">
+            <div class="proposal-list-item-icon"></div>
+            <p class="proposal-list-item-text">
+              Experience the satisfaction of real progress as your language
+              skills and confidence grow with every session.
+            </p>
+          </li>
+        </ul>
+        <div class="proposal-decor-img-wrap">
+          <div class="proposal-decor-img"></div>
+        </div>
+      </div>
 
       <a class="button proposal-button" href="#leave-application"
         >Leave an application</a
