--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -1,4 +1,5 @@
-<div class="container">
+<!-- PROPOSAL TO LEAVE AN APPLICATION  -->
+<div class="container proposal-container">
   <section class="proposal-section">
     <h2 class="visually-hidden">Proposal to leave an application</h2>
 
